--- a/public/css/style.css
+++ b/public/css/style.css
@@ -101,6 +101,11 @@ body {
     font-size: 16px;
 }
 
+#footer {
+    position: fixed;
+    bottom: 0;
+}
+
 .creator {
     text-decoration: none;
     color: #333;
